# DataflowProject

./: .bashrc  .env.example  .gitignore  Dockerfile  Dockerfile.local  Makefile  docker-compose.yml  pom.xml  pyproject.toml
cloudbuild/deploy/: cloudbuild.yaml
src/main/java/com/demo/: PubSubToBigQuery.java  SchemaUtils.java
src/main/python/template/: metadata.json  template.py  test.py
src/main/python/utility/: avro_utility.py  big_query_utility.py
